Contexts, debug infos, change collection methods
- Added debug infos in patch processing procedure.
- Changed `copyOf()` to unmodifiable version.
- Added context for ctor and patch method `apply()`